2006-10-03  Roland Dreier  <rdreier@cisco.com>

	* src/cq.c (mthca_poll_one): Annotate so that Valgrind knows
	contents of CQ entry are all valid after they are written by HCA.
	(set_cqe_hw): Annotate so that CQ entries owned by hardware are
	not defined.

	* src/mthca.h: Add wrapper for VALGRIND_MAKE_MEM_DEFINED so that
	it can be used in .c files without worrying about whether Valgrind
	is installed or enabled.

	* configure.in: Add support for Valgrind annotation (enabled with
	--with-valgrind option to configure).

	* src/verbs.c (mthca_create_qp): Set reserved fields to 0 to avoid
	future problems and also to make Valgrind a little quieter.

2006-09-04  Roland Dreier  <rdreier@cisco.com>

	* src/verbs.c (mthca_destroy_qp): Avoid potential AB-BA deadlock
	when destroying QPs by always taking CQ locks in a consistent
	order (lowest CQN first).  The old code always took the send_cq
	lock first, which is prone to deadlock if the send_cq of one QP is
	the recv_cq of another QP destroyed at the same time.  This bug
	was pointed out by Dotan Barak and Jack Morgenstein.

2006-08-23  Roland Dreier  <rdreier@cisco.com>

	* src/verbs.c (mthca_resize_cq): Add a test for
	IBV_CMD_RESIZE_CQ_HAS_RESP_PARAMS to make libmthca work with newer
	libibverbs libraries that add two parameters to ibv_cmd_resize_cq().

2006-08-09  Michael S. Tsirkin  <mst@mellanox.co.il>

	* src/qp.c (mthca_tavor_post_send, mthca_arbel_post_send): Fence
	bit must be set in both doorbell and WQE.

2006-08-03  Jack Morgenstein  <jackm@mellanox.co.il>

	* src/mthca.h: Include <stddef.h> to get definition of offsetof().

2006-08-03  Michael S. Tsirkin  <mst@mellanox.co.il>

	* src/verbs.c (mthca_create_srq): Limit SRQ max_wr to avoid
	integer overflow.

2006-07-26  Roland Dreier  <rdreier@cisco.com>

	* src/mthca.h, src/ah.c, src/cq.c, src/memfree.c, src/qp.c,
	src/srq.c, src/verbs.c: Convert internal allocations for AH pages
	(for non-memfree HCAs), CQ buffers, doorbell pages (for memfree