@@ -156,7 +156,7 @@ static inline void update_cons_index(struct mthca_cq *cq, int incr)
 
 	if (mthca_is_memfree(cq->ibv_cq.context)) {
 		*cq->set_ci_db = htonl(cq->cons_index);
-		mb();
+		wmb();
 	} else {
 		doorbell[0] = htonl(MTHCA_TAVOR_CQ_DB_INC_CI | cq->cqn);
 		doorbell[1] = htonl(incr - 1);
@@ -315,7 +315,7 @@ static inline int mthca_poll_one(struct mthca_cq *cq,
 	 * Make sure we read CQ entry contents after we've checked the
 	 * ownership bit.
 	 */
-	mb();
+	rmb();
 
 	qpn = ntohl(cqe->my_qpn);
 
@@ -476,7 +476,7 @@ int mthca_poll_cq(struct ibv_cq *ibcq, int ne, struct ibv_wc *wc)
 	}
 
 	if (freed) {
-		mb();
+		wmb();
 		update_cons_index(cq, freed);
 	}
 
@@ -520,7 +520,7 @@ int mthca_arbel_arm_cq(struct ibv_cq *ibvcq, int solicited)
 	 * Make sure that the doorbell record in host memory is
 	 * written before ringing the doorbell via PCI MMIO.
 	 */
-	mb();
+	wmb();
 
 	doorbell[0] = htonl((sn << 28)                       |
 			    (solicited ?
@@ -586,7 +586,7 @@ void mthca_cq_clean(struct mthca_cq *cq, uint32_t qpn, struct mthca_srq *srq)
 	}
 
 	if (nfreed) {
-		mb();
+		wmb();
 		cq->cons_index += nfreed;
 		update_cons_index(cq, nfreed);
 	}
